# tincta-V2

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
assets/: simpleedit.desktop  tincta.desktop
docs/: index.html
snap/: snapcraft.yaml
snap/gui/: simpleedit.desktop  tincta.desktop
src/: app.rs  config.rs  formatter.rs  main.rs  menu_bar.rs  session.rs  theme.rs  updater.rs
src/editor/: mod.rs
src/i18n/: en.json  fr.json
src/preferences/: mod.rs
src/search/: mod.rs
src/sidebar/: mod.rs
