[package]
name = "simpleedit"
version = "0.6.2"
edition = "2021"
description = "A fast, stable, cross-platform text editor"
license = "MIT"
repository = "https://github.com/simpleeditdev/simpleedit"
readme = "README.md"
keywords = ["text-editor", "editor", "syntax-highlighting"]
categories = ["text-editors"]

[[bin]]
name = "simpleedit"
path = "src/main.rs"

[dependencies]
iced = { version = "0.12", features = ["advanced", "highlighter", "tokio"] }
iced_aw = { version = "0.9", default-features = false, features = ["menu", "context_menu", "quad", "drop_down", "floating_element", "modal"] }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "plist-load"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14"
dirs = "5"
rust-i18n = "3"
once_cell = "1"
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.deb]
maintainer-scripts = "debian/"
maintainer = "sindus"
copyright = "2024, sindus"
license-file = ["LICENSE", "0"]
extended-description = "A fast, stable, cross-platform text editor with syntax highlighting for 60+ languages."
depends = "$auto"
section = "editors"
priority = "optional"
assets = [
    ["target/release/simpleedit", "usr/bin/", "755"],
    ["assets/simpleedit.desktop", "usr/share/applications/", "644"],
    ["assets/simpleedit.png", "usr/share/icons/hicolor/256x256/apps/", "644"],
    ["assets/simpleedit.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
]
